--- a/dns/application.properties
+++ b/dns/application.properties
@@ -26,9 +26,9 @@ spring.mvc.static-path-pattern=/static/**
 spring.http.multipart.maxFileSize=1024MB
 spring.http.multipart.maxRequestSize=1024MB
 
-spring.datasource.url=jdbc:mysql://mysql.bboysoul.com:3306/dns?characterEncoding=utf8&useSSL=false
+spring.datasource.url=jdbc:mysql://10.10.10.200:3306/dns?characterEncoding=utf8&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=passwd
+spring.datasource.password=pass
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.max-idle=10
 spring.datasource.max-wait=10000
