--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,5 +7,5 @@ services:
     volumes:
       - "./dns/:/dns/"
     ports: 
-      - "8088:80"
-      - "53:53"
+      - "8084:80"
+      - "53:53/udp"
